--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -7,7 +7,7 @@ $card-bg: #fff;
 $card-txt: #888;
 $btn-txt: #fff;
 $btn-bg: #011daa;
-$btn-border: #fff;
+$btn-border: rgba(0, 0, 0, 0);
 $btn-txt-focus: #fff;
 $btn-bg-focus: #000;
 $primary-bg: #fff;
